# radare2-mcp

./: .clang-format  .gitignore  AGENTS.md  Dockerfile  INSTALL.md  LICENSE  Makefile  Makefile.acr  Makefile.w64  README.md  TODO.md  WINDOWS_BUILD.md  autogen.sh  config.h.w64  configure  configure.acr  configure.bat  curl.inc.c  debug.txt  install.bat  main.c  make.bat  meson.build  meson_options.txt  preconfigure.bat  prompts.c  r2_mcp.c  r2api.inc.c  r2mcp.c  r2mcp.h  readbuffer.c  readbuffer.h  readbuffer.inc.c  test.sh  test2.sh  tools.c  tools.h  utils.inc.c
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  windows-batch-ci.yml  windows-ci.yml  windows-msys2-ci.yml
doc/: r2mcp.1  sessions.md
prompts/: document_function.r2ai.md  find_crypto_material.r2ai.md
src/: Makefile  Makefile.acr  bind.inc.c  compat.c  config.h.acr  curl.inc.c  dsltest.c  jsonrpc.c  jsonrpc.h  main.c  path.inc.c  plugin.c  prompts.c  prompts.h  r2api.inc.c  r2mcp.c  r2mcp.h  readbuffer.c  readbuffer.h  sessions.c  sessions.h  tools.c  tools.h  utils.inc.c  validation.c  validation.h
src/prompts/: crackme_solver.r2ai.md  find_control_flow_path.r2ai.md
svc/: Makefile  README.md  r2mcp-svc.c
